syntax = "proto2";

package entry;

option java_package="com.segway.prototest.entry";
option java_outer_classname="ProtoTestString";

message StringEntry{
    required string val1 = 1;
}